# rray

./: Cargo.toml  README.md  example1.json  example1.yaml  project_icon.yaml
examples/: area_light.yaml  noise_pattern.json  perturbed_pattern.json  ring_pattern.json
examples/objects/: cone.yaml  cube.json  cube.yaml  cylinder.yaml  sphere.json  sphere.yaml  torus.yaml  triangle.yaml
examples/patterns/: blend_pattern.json  blend_pattern.yaml  checker_pattern.json  checker_pattern.yaml  gradient_pattern.json  gradient_pattern.yaml  noise_pattern.yaml  perturbed_pattern.json  perturbed_pattern.yaml  ring_pattern.yaml  stripe_pattern.json  stripe_pattern.yaml
src/: camera.rs  canvas.rs  color.rs  light.rs  main.rs  material.rs  matrix.rs  object.rs  pattern.rs  ray.rs  raytracer.rs  scene.rs  shape.rs  tuple.rs  world.rs  world_builder.rs
src/raytracer/: camera.rs  canvas.rs  computations.rs  intersection.rs  light.rs  load_obj.rs  material.rs  object.rs  ray.rs  scene.rs  scene_builder.rs  scene_builder_yaml.rs  scene_json.rs
src/raytracer/material/: noise.rs  pattern.rs  texture.rs
src/raytracer/object/: cone.rs  csg.rs  cube.rs  cylinder.rs  db.rs  group.rs  plane.rs  smooth_triangle.rs  sphere.rs  torus.rs  triangle.rs
src/shape/: cone.rs  cube.rs  cylinder.rs  plane.rs  sphere.rs  tests.rs
