[package]
name = "rray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.13"
indicatif = "0.17.8"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
# want f64 support for noise
fastnoise-lite = { version = "1.1.1", features = ["f64"] }
rand = "0.8.5"
tobj = "4.0.2"
yaml-rust2 = "0.8"